@@ -15,12 +15,12 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 38dd40d4fe9a8a408648f2f2c1a2a3ac76bbac72 Build.PL
-SHA1 b88c6a439cd1c13d08dacf95487772400cfc45f2 CHANGES
+SHA1 8ffbd6a52aacd5c85f77423857404c3e4915e161 CHANGES
 SHA1 675c8474714bc9255f090cbe07828886ff5342cb INSTALL
 SHA1 902547f45944e2121ef06ce5823e3630b1e69bb2 LICENSE
 SHA1 f89e179ca656afa93e98628878bf66b5f88fd0bf MANIFEST
 SHA1 4f111e5808a5629971aa04ec56c3eb886255ff10 MANIFEST.SKIP
-SHA1 6aff60adbca39344d89de252be239fe4eec99175 META.yml
+SHA1 4f072c53b3d688330a7498e1efa18e6a9a2b61b1 META.yml
 SHA1 5519359e7fad7e80d88d3f7cfeb0e5ee5571139a Makefile.PL
 SHA1 b12ee2002edb5c60786b7035d5c5e5630487a3a3 README
 SHA1 8d2c096298c13bd1c9373c303e7a7e9583a136b7 TODO
@@ -57,9 +57,9 @@ SHA1 80d024f3eccf1c825b02b5e59de236b0af7d4bfc inc/Module/Install/Metadata.pm
 SHA1 a748c6176a996e5f32c50f2c49670a8ce532fb71 inc/Module/Install/Scripts.pm
 SHA1 fe6780ea5cfd67c79140699fbd4f0fe262255d57 inc/Module/Install/Win32.pm
 SHA1 51d43bffcfd7ffdecb8c8e9f97f3896c31b2e1b2 inc/Module/Install/WriteAll.pm
-SHA1 53c7c1eab333c5ab29d3f28606c2c5fbf19fa569 lib/Graph/Easy.pm
+SHA1 ef334edfda44bef864837466b739e53183764473 lib/Graph/Easy.pm
 SHA1 38864d5ce3cc7eb11cd439673d2e0b4dd7474c4d lib/Graph/Easy/As_ascii.pm
-SHA1 02d6739266a44448ed06bd13d48543530fe10d20 lib/Graph/Easy/As_graphml.pm
+SHA1 ddcbfab40838d263b97542c50a803443d33104db lib/Graph/Easy/As_graphml.pm
 SHA1 9d902cf933ebf9e5e60fc335ef914fe4adebf7d8 lib/Graph/Easy/As_graphviz.pm
 SHA1 d23a565dbf8cd57e2e4a8350c885b43a4f065823 lib/Graph/Easy/As_txt.pm
 SHA1 7f0bec7b79baebe1e320afb81395c8321563643c lib/Graph/Easy/As_vcg.pm
@@ -116,7 +116,7 @@ SHA1 085035fc92bd9c91ef012818a0a185d7fa215fb0 t/fun/biofuel.txt
 SHA1 4d7761bd6464f43e48426d53600f8df4a9a678d5 t/fun/geek_dating.txt
 SHA1 bec67bcae8251fe1a4c2a8055166a7b115a49d7e t/fun/overview.txt
 SHA1 be4650743be45e06cb6999c5647802ad33465c46 t/graph.t
-SHA1 81ab0bfff1c1d09e030a94955aa76700a7ea665e t/graphml.t
+SHA1 6d5725ee4a51bec02887589ca7b8da2a37e83264 t/graphml.t
 SHA1 99813920030054f45976db34e7335aad963226b2 t/graphviz.t
 SHA1 b7f4e73344e5c73c20adf9e19f52bed3d2495f0f t/group.t
 SHA1 b77c80d15fb5a39e7abe8af5b2a79a5c395a3dd2 t/group/0010.txt
@@ -740,11 +740,11 @@ SHA1 78d05ed8ad93b351a116b5097561958f6c63fcd7 t/vcg.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.2 (GNU/Linux)
 
-iQEVAwUBRuQnX3cLPEOTuEwVAQI4cAf+JEZOkO57bFynWqSZYcyb0T/AnJejOJBH
-LooGXsEvQppZQzJFtsjUdOCTgfeB7YEk54FdFWwdqzIGKvGclqEuIsF4ryF+ZJ2s
-IbUZMhZmviFDg9igggRASd8dGqM766PvQXbRoxYkzDB2z0hJ1ytwtJxJucOFYzI8
-dSGEx7HJHVUMxdwDJePNcXElqJcJ9in0bzhS92kWcxHdMGF0lJfjWWKVYtgnnWoT
-BSWncAgiQJWNMoDtRebZErDGE7qbUxSxERx7Y5my42/I70TtmoQH91aM/F1ZgyJq
-2hdWKTgGhpGjC+Z0ugC5PJj2MtSt7OQNdVxeoFcZsRTBgY6a4RKFvA==
-=vgbW
+iQEVAwUBRuVmUncLPEOTuEwVAQL+dQf+KtvJFqBf60P8aoUBfkR1xtO2W/9VrZRK
+mPNYKM0CFzFBh9aRbqKPv/SNaiHO0eVHfSx2r6aUFbQrckBEUbJERowfQUIarNiS
+qAHPNyT0keT5b2gka5Ueb8aMJZNpHHhn0HHO8fUdfnbnRKXlF9IeWW27Mcb0hht+
+5eY1CF/XNMOJbuoXwsds3gJPGtA5J8+pj66APdiOJ9WDVfe8I/zze5Af6um3J/PP
+y2GTEQuhl0Tl9lX0IbMv8CMjDWyTDOhq76BLkUdhuIqZQydkOKWNLrXwdWhCDAka
+49jiKbbw4CHf40sU2Ibwx3rz4xpHp8EjfDtTAHVtzcLYnkkl7u0WGw==
+=Nhrf
 -----END PGP SIGNATURE-----
