@@ -4,7 +4,7 @@
 
 package Graph::Easy::As_graphml;
 
-$VERSION = '0.01';
+$VERSION = '0.02';
 
 #############################################################################
 #############################################################################
@@ -212,7 +212,6 @@ sub _attributes_as_graphml
     $t =~ s/##value##/$graph->_safe_xml($att->{$n})/e;
     $txt .= $t;
     }
-  $txt .= "\n" if $txt ne '';
   $txt;
   }
 
